monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4102/A4102i.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4102;

grammar A4102i {

  A = "a";

  astrule A =
    b:Optional<String> max=*;

}